# ckanext-theming

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  _macros.html  babel.cfg  dev-requirements.txt  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  pyproject.toml.extract.py  setup.cfg  sitemap.xml  test-requirements.txt  test.ini  tsconfig.bare.json  tsconfig.bs5.json  tsconfig.bulma.json  tsconfig.json  tsconfig.pico.json  tsconfig.tailwind.json  types.d.ts  types.ts  zensical.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docs.yml  publish.readme.md  publish.yml  test.yml
advanced/: index.html
best-practices/: index.html
blocks/: index.html
ckanext/theming/: __init__.py  base.py  cli.py  components.yaml  config.py  config_declaration.yaml  dump_source.json  dump_source.yaml  helpers.py  interfaces.py  lib.py  plugin.py  reference.py  templates.yaml  views.py
cli/: index.html
docs/: _macros.html  advanced.md  best-practices.md  blocks.md  cli.md  index.md  integration.md  main.py  migration.md  parameters.md  philosophy.md  recipes.md  styleguide.md  theme.md  theming-parties.md
docs/roles/: extension-developers.md  portal-maintainers.md  theme-developers.md
docs/theme/: basic.md  (+3 more)
migration/: index.html
parameters/: index.html
philosophy/: index.html
recipes/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
styleguide/: index.html
theme/: index.html
theming-parties/: index.html
(+925 files in other folders)
